[package]
name = "withpwn-blind-backrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artemis-core = { git = "https://github.com/paradigmxyz/artemis" }

## async
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
async-trait = "0.1.74"
futures = "0.3.29"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
jsonrpsee = { version = "0.20.3", features = ["client", "async-client"] }

## eth
ethers = { version = "2.0.11", features = ["ws", "rustls"] }
ethers-flashbots = { git = "https://github.com/FrankieIsLost/ethers-flashbots", features = ["rustls"] }
mev-share = "0.1.4"

## misc
anyhow = "1.0.75"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower = "0.4.13"
clap = { version = "4.4.8", features = ["derive"] }
dotenv = "0.15.0"
